Fix: Collapse icon alignment in panels caused by c2f2210

--- a/src/scss/lexicon-base/variables/_icons.scss
+++ b/src/scss/lexicon-base/variables/_icons.scss
@@ -4,7 +4,7 @@ $collapse-icon-padding-right: 45px !default;
 $collapse-icon-position-bottom: null !default;
 $collapse-icon-position-left: null !default;
 $collapse-icon-position-right: 15px !default;
-$collapse-icon-position-top: 15px !default;
+$collapse-icon-position-top: 10px !default;
 
 $help-icon-default-bg: $input-group-addon-bg !default;
 $help-icon-default-color: lx-color-by-lightness($text-color, $help-icon-default-bg) !default;
